Remove security manager support and other deprecated items.
Addressed some compile warnings, yet many still remain.

Signed-off-by: Arjan Tijms <arjan.tijms@omnifish.ee>